--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "rgbColorGame.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+	"start":"node rgbColorGame.js"
   },
   "author": "",
   "license": "ISC",
